hphp/test/slow/like_types/like_casts_wrong_class.php.expectf

Fatal error: Uncaught exception 'TypeAssertionException' with message 'Expected D, got C' in %s/hphp/test/slow/like_types/like_casts_wrong_class.php:10
Stack trace:
#0 {main}
